<?xml version="1.0" encoding="utf-8" ?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>jp.co.tis</groupId>
  <artifactId>samples</artifactId>
  <packaging>pom</packaging>
  <version>0.0.1-SNAPSHOT</version>
  <modules>
    <module>common/doma2</module>
    <module>common/sql-management</module>

    <module>web/doma2-optimistic-lock</module>
    <module>web/double-submission</module>
    <module>web/error-handling</module>
    <module>web/file-download</module>
    <module>web/spring-security-http-response-header</module>
    <module>web/table-authentication</module>
    <module>web/template-engine-thymeleaf</module>
    <module>web/tomcat-access-log</module>
    <module>web/validation</module>

    <module>api/api-error-handling</module>

    <module>batch/doma2-spring-batch</module>

    <module>aws/rds</module>
    <module>aws/s3</module>
    <module>aws/ses</module>
  </modules>

  <!-- spring-boot-version-start -->
  <parent>
    <groupId>org.springframework.boot</groupId>
    <artifactId>spring-boot-starter-parent</artifactId>
    <version>2.7.5</version>
  </parent>
  <!-- spring-boot-version-end -->

  <properties>
    <java.version>11</java.version>
  </properties>

  <dependencyManagement>
    <dependencies>
      <!-- other-versions-start -->
      <!-- doma-starter-start -->
      <dependency>
        <groupId>org.seasar.doma.boot</groupId>
        <artifactId>doma-spring-boot-starter</artifactId>
        <version>1.6.0</version>
      </dependency>
      <dependency>
        <groupId>org.seasar.doma</groupId>
        <artifactId>doma-processor</artifactId>
        <version>2.53.0</version>
        <optional>true</optional>
      </dependency>
      <dependency>
        <groupId>org.seasar.doma</groupId>
        <artifactId>doma-slf4j</artifactId>
        <version>2.53.0</version>
      </dependency>
      <!-- doma-starter-end -->
      <dependency>
        <groupId>io.awspring.cloud</groupId>
        <artifactId>spring-cloud-aws-dependencies</artifactId>
        <version>2.4.2</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
      <dependency>
        <groupId>com.github.database-rider</groupId>
        <artifactId>rider-spring</artifactId>
        <version>1.34.0</version>
        <scope>test</scope>
      </dependency>
      <dependency>
        <groupId>com.github.database-rider</groupId>
        <artifactId>rider-junit5</artifactId>
        <version>1.34.0</version>
        <scope>test</scope>
      </dependency>

      <!-- logback-access-spring-boot-version-start -->
      <dependency>
        <groupId>dev.akkinoc.spring.boot</groupId>
        <artifactId>logback-access-spring-boot-starter</artifactId>
        <version>3.4.0</version>
      </dependency>
      <!-- logback-access-spring-boot-version-end -->

      <!-- keel-web-start -->
      <dependency>
        <groupId>jp.fintan.keel</groupId>
        <artifactId>keel-spring-boot-starter-web</artifactId>
        <version>1.0.0</version>
      </dependency>
      <!-- keel-web-end -->

      <dependency>
        <groupId>org.springframework.cloud</groupId>
        <artifactId>spring-cloud-dependencies</artifactId>
        <version>2021.0.4</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
      <!-- other-versions-end -->
    </dependencies>
  </dependencyManagement>

  <build>
    <plugins>
      <plugin>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-maven-plugin</artifactId>
      </plugin>
    </plugins>
  </build>

</project>
